kubernetes/mysql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: mysql
   annotations:
     ncp/no_snat: "true"
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mysql
  namespace: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - resources:
            limits :
              cpu: 0.5
          image: sushilk/planespotter-sql
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
---
apiVersion: v1
kind: Service
metadata:
  namespace: mysql
  name: mysql-svc
  namespace: mysql
  labels:
    app: mysql-svc
spec:
  ports:
    # the port that this service should serve on
    - port: 3306
  selector:
    app: mysql
