kubernetes/app-server-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: planespotter
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: planespotter-app
  namespace: planespotter
  labels:
    app: planespotter
    tier: app-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planespotter
  template:
    metadata:
      labels:
        app: planespotter
    spec:
      containers:
      - name: planespotter
        image: yfauser/planespotter-app-server:49696c14cf4cce6e8d822b58fc55d3157567e2c6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: planespotter-app-cfg
---
apiVersion: v1
kind: Service
metadata:
  namespace: planespotter
  name: planespotter-svc
  namespace: planespotter
  labels:
    app: planespotter-svc
spec:
  ports:
    # the port that this service should serve on
    - port: 80
  selector:
    app: planespotter
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: planespotter-app-ingress
  namespace: planespotter
spec:
  rules:
  - host: planespotter-api.pks.yves.local
    http:
      paths:
      - backend:
          serviceName: planespotter-svc
          servicePort: 80
